# Microshop

./: .gitignore  alembic.ini  item_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_05_30_2014-d255876c1137_create_products_table.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  product.py
users/: schemas.py  views.py
